# whats-this-id

./: .gitignore  Makefile  README.md  pyproject.toml
.deprecated/core/: __init__.py  example.py  manager.py
.deprecated/core/parsers/: metadata_extractor.py  text_cleaners.py  timing_utils.py  track_extractors.py
.deprecated/core/scraping/: google.py
.deprecated/core/search/: __init__.py  manager.py  searcher.py  trackidnet_search.py  tracklist1001.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-python.yaml
scripts/: refresh_cookies.sh  wipe_cookies.sh
src/frontend/: app.py
src/scraping/: config.py  google.py  tracklist.py
src/tracklist_search/: crew.py  main.py  tracklist.py
src/tracklist_search/tools/: find_tracklist.py
src/whats_this_id/: crew.py  main.py  tracklist.py
src/whats_this_id/agents/: __init__.py
src/whats_this_id/agents/tracklist_finder/: crew.py  main.py
src/whats_this_id/config/: agents.yaml  tasks.yaml
src/whats_this_id/core/: __init__.py  common.py  config.py  cookie_refresh.py  example.py  manager.py  refresh_cookies.py
src/whats_this_id/core/analysis/: exploration.ipynb
src/whats_this_id/core/audio/: __init__.py
src/whats_this_id/core/downloader/: client.py  jobs.py
src/whats_this_id/core/fetchers/: base.py  fetcher.py  html_fetcher.py
src/whats_this_id/core/models/: __init__.py  tracklist.py
src/whats_this_id/core/orchestration/: orchestrator.py
src/whats_this_id/core/parsers/: base.py  metadata_extractor.py  parser.py  text_cleaners.py  timing_utils.py  track_extractors.py
src/whats_this_id/core/scrape/: config.py  google.py  tracklist.py
src/whats_this_id/core/scraping/: __init__.py  config.py  google.py  soundcloud.py  tracklist.py
src/whats_this_id/core/search/: __init__.py  models.py  searcher.py  soundcloud.py  strategy.py  trackid.py  tracklist1001.py
src/whats_this_id/core/services/: __init__.py  djset_processor.py  metadata_extractor.py  search_service.py
src/whats_this_id/core/split/: ffmpeg.py
src/whats_this_id/core/tracklist_manager/: manager.py
src/whats_this_id/examples/: tracklist_manager.py
src/whats_this_id/frontend/: __init__.py  app.py  config.py  state.py
src/whats_this_id/frontend/components/: __init__.py  (+7 more)
src/whats_this_id/tools/: find_tracklist.py
src/whats_this_id/tracklist_search/: crew.py  main.py
tests/: conftest.py  test_fetchers.py  test_manager.py  test_parsers.py  test_search.py  test_track_extraction.py
tests/core/parsers/: test_timing_utils.py
tests/core/services/: test_metadata_extractor.py
(+17 files in other folders)
