[project]
name = "whats_this_id"
version = "0.1.0"
description = "find dj set ids"
authors = [{ name = "Jacopo Carrani", email = "jacopocarrani@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crawl4ai>=0.6.3",
    "crewai-tools>=0.46.0",
    "crewai[tools]>=0.126.0,<1.0.0",
    "dj-set-downloader>=0.1.3",
    "ffmpeg>=1.4",
    "openai>=1.75.0",
    "pydantic>=2.11.7",
    "soundcloud-lib>=0.6.1",
    "streamlit>=1.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/whats_this_id"]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.13",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]