[project]
name = "whats_this_id"
version = "0.1.0"
description = "find dj set ids"
authors = [{ name = "Jacopo Carrani", email = "jacopocarrani@gmail.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "dj-set-downloader>=0.1.3",
    "librosa>=0.11.0",
    "pydantic>=2.11.7",
    "streamlit>=1.45.1",
    "trackidnet>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/whats_this_id"]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.13",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
